--- a/about1stproject.html
+++ b/about1stproject.html
@@ -8,6 +8,17 @@
 <title>About us</title>
 <style>
 body{background-color:#f5fffa; font-family:armenian; font-size:16px;}
+a {
+    text-decoration: none;
+}
+    a:link, a:visited {
+        color:#cf5c3f;
+    }
+    a:hover, a:active {
+         background-color:#cf5c3f;
+         color:#fff;
+    }
+
 </style>
 </head>
 
